fixed a weird spacing above the chatbox container

--- a/public/assets/css/calendar.css
+++ b/public/assets/css/calendar.css
@@ -28,7 +28,7 @@ button {
 }
 
 .mt-5 {
-    margin-top: 8rem !important;
+    margin-top: 8rem;
 }
 
 #header {
